[package]
name = "pubsub"
version = "0.1.0"
authors = ["Samba Diallo <samba.diallo@pubnub.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
custom_error = "1.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cursive = { version = "0.12.0", default-features = false, features = ["pancurses-backend"] }
percent-encoding = "1.0.1"